@@ -1,3 +1,8 @@
+Mon Mar 20 19:58:45 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* command.c (_initialize_command): Document requirements for ``!''
+ 	command.
+
 Mon Mar 20 18:12:46 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	From Fri 10 Mar 2000 Robert
